Implemented quill with typescript and configured editor to look like a4 page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,70 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #f3f3f3;
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
+
+.container .ql-editor {
+  border: none;
+  width: 210mm !important;
+  min-height: 297mm !important;
+  padding: 0.5in !important;
+  margin: 1rem;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
+  background-color: white;
+}
+
+.container .ql-container.ql-snow {
+  border: none;
+  display: flex;
+  justify-content: center;
+}
+
+.container .ql-toolbar.ql-snow {
+  display: flex;
+  justify-content: center;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: #f3f3f3;
+  border: none;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
+  width: 100vw;
+}
+
+@page {
+  margin: 0.5in;
+}
+
+@media print {
+  body {
+    background: none;
+  }
+
+  .container .ql-editor {
+    width: calc(210mm - 1in);
+    height: calc(297mm - 1in);
+    padding: 0;
+    margin: 0;
+    align-self: flex-start;
+    justify-self: center;
+  }
+  .container .ql-toolbar.ql-snow {
+    display: none;
+  }
 }
