--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -300,16 +300,24 @@ body {
   }
 }
 
-.ProseMirror img.float-left {
-  float: left;
-  margin-right: 1rem;
-  margin-bottom: 1rem;
-  max-width: 50%;
+.ProseMirror {
+  background-color: red;
+  overflow: auto;
 }
 
-.ProseMirror img.float-right {
-  float: right;
-  margin-left: 1rem;
-  margin-bottom: 1rem;
-  max-width: 50%;
+.ProseMirror p {
+  clear: inherit;
+}
+
+.ProseMirror img {
+  margin: 0;
+}
+
+.ProseMirror p div {
+  float: left;
+  margin-right: 5px;
+}
+
+div[style*="position: absolute"][style*="top: 0%"][style*="left: 50%"][style*="z-index: 999"] {
+  display: none !important;
 }
