--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -287,12 +287,12 @@ body {
   }
 }
 
-.page-break {
+/* .page-break {
   height: 20px;
   width: 100%;
   border-top: 1px dashed #ccc;
   margin: 10px 0;
-}
+} */
 
 @media print {
   .page-break {
